--- a/ChangeOSGHeaderSuffix/ChangeOSGHeaderSuffix/ChangeOSGHeaderSuffix.vcxproj
+++ b/ChangeOSGHeaderSuffix/ChangeOSGHeaderSuffix/ChangeOSGHeaderSuffix.vcxproj
@@ -142,6 +142,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>../../InternalInclude</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
